src/objects/Training_Plan_Category__c.object
<CustomObject>
    <fields>
        <fullName>Learning_Category__c</fullName>
        <label>Learning Category</label>
        <referenceTo>Learning_Category__c</referenceTo>
        <relationshipLabel>Training Plan Categories</relationshipLabel>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Training Plan Categories</relationshipLabel>
        <relationshipName>Training_Plan_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Training Plan Category</label>
    <nameField>
        <displayFormat>TPC-{0000000}</displayFormat>
        <label>Training Plan Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>